k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
 name: backend

spec:
 replicas: 2

 selector:
   matchLabels:
     app: backend

 template:
   metadata:
     labels:
       app: backend

   spec:
     containers:
     - name: backend

       image: 588319087110.dkr.ecr.ap-south-1.amazonaws.com/backend:4

       ports:
       - containerPort: 5000
