k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: 588319087110.dkr.ecr.ap-south-1.amazonaws.com/frontend:50
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
